--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@
 }
 
 :root {
-    --a-color: #6599FF;
-    --a-hover: #00E1FF;
-    --p-color: #545B6B;
-    --transtion: 0.5s
+    --main-color: #00E1FF;
+    --p-color: #777;
+    --transparent-color: rgb(15 116 143 / 70%);
+    --transtion: 0.5s;
+    --section--padding: 100px
 }
 
 html {
@@ -20,7 +21,6 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #333;
 }
 
 ul {
@@ -31,20 +31,66 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 15px;
-}
-
 .container {
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
 
+/* Start Componantes */
+.main-heading {
+    text-align: center;
+}
+
+.main-heading h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 40px;
+    margin-bottom: 70px;
+    position: relative;
+}
+
+.main-heading h2::before {
+    content: '';
+    position: absolute;
+    width: 120px;
+    height: 2px;
+    left: 50%;
+    bottom: -30px;
+    background: #333;
+    transform: translateX(-50%);
+}
+
+.main-heading h2::after {
+    content: '';
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    left: 50%;
+    bottom: -38px;
+    border: 2px solid #333;
+    background-color: white;
+    transform: translateX(-50%);
+
+}
+
+.main-heading p {
+    width: 550px;
+    max-width: 100%;
+    margin: 0 auto 100px;
+    color: var(--p-color);
+    line-height: 2;
+}
+
+/* End Componantes */
+
+
 /* ---------- Media Quires -------------- */
 
 /* ============= Small ======== */
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .container {
         width: 750px;
     }
@@ -65,164 +111,3 @@ p {
 }
 
 /* End Global Rules */
-
-header {
-    width: 100%;
-    background-color: #222;
-}
-
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 97px;
-    position: relative;
-}
-
-@media screen and (max-width: 767px) {
-    header .container {
-        min-height: 70px;
-    }
-}
-
-header .container::after {
-    content: '';
-    position: absolute;
-    height: 1px;
-    width: calc(100% - 30px);
-    background: #a2a2a2;
-    bottom: 0;
-
-}
-
-header .container .logo img {
-    height: 40px;
-}
-
-@media screen and (max-width: 767px) {
-    header .container .logo img {
-        height: 30px;
-    }
-}
-
-header nav {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-header nav .menu {
-    color: white;
-    font-size: 22px;
-    cursor: pointer;
-}
-
-header nav .menu::selection {
-    background-color: transparent;
-}
-
-@media (min-width: 768px) {
-    header nav .menu {
-        display: none;
-    }
-}
-
-
-header nav ul {
-    display: flex;
-}
-
-@media screen and (max-width: 767px) {
-    header .container {
-        min-height: 70px;
-    }
-
-    header .container .logo img {
-        height: 30px;
-    }
-
-    header nav ul {
-        display: none;
-    }
-
-    header nav .style {
-        color: var(--a-hover);
-        transition: var(--transtion);
-        -webkit-transition: var(--transtion);
-        -moz-transition: var(--transtion);
-        -ms-transition: var(--transtion);
-        -o-transition: var(--transtion);
-}
-    header nav .style + ul {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background: rgb(0 0 0 / 50%);
-    }
-
-    header nav .style+ul li a {
-        padding: 20px;
-    }
-}
-
-header nav ul li a {
-    position: relative;
-    z-index: 5;
-    text-transform: uppercase;
-    font-weight: 500;
-    display: block;
-    padding: 40px 10px;
-    color: white;
-    font-size: 14px;
-    transition: var(--transtion);
-    -webkit-transition: var(--transtion);
-    -moz-transition: var(--transtion);
-    -ms-transition: var(--transtion);
-    -o-transition: var(--transtion);
-}
-
-header nav ul li a.active,
-header nav ul li a:hover {
-    color: var(--a-hover);
-    border-bottom: 1px solid var(--a-hover);
-}
-
-header nav .form {
-    position: relative;
-    width: 40px;
-    height: 30px;
-    margin-left: 30px;
-    border-left: 1px solid white;
-}
-
-@media screen and (max-width: 767px) {
-    header nav .form {
-        margin: 0 20px;
-    }
-}
-
-header nav .form i {
-    position: absolute;
-    color: white;
-    font-size: 20px;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-}
-
-
-.landing {
-    min-height: 100vh;
-    background-color: #1f2021;
-    background-image: url(../images/landing.jpg);
-    background-size: cover;
-    position: relative;
-}
