--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
 }
 
 :root {
-    --main-color: #00E1FF;
+    --main-color: #00e1ff;
     --p-color: #777;
     --transparent-color: rgb(15 116 143 / 70%);
     --transtion: 0.5s;
-    --section--padding: 100px
+    --section--padding: 100px;
 }
 
 html {
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 ul {
@@ -37,6 +37,7 @@ a {
     margin: 0 auto;
 }
 
+/* End Global Rules */
 /* Start Componantes */
 .main-heading {
     text-align: center;
@@ -52,7 +53,7 @@ a {
 }
 
 .main-heading h2::before {
-    content: '';
+    content: "";
     position: absolute;
     width: 120px;
     height: 2px;
@@ -63,7 +64,7 @@ a {
 }
 
 .main-heading h2::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 14px;
     height: 14px;
@@ -73,7 +74,6 @@ a {
     border: 2px solid #333;
     background-color: white;
     transform: translateX(-50%);
-
 }
 
 .main-heading p {
@@ -85,7 +85,6 @@ a {
 }
 
 /* End Componantes */
-
 
 /* ---------- Media Quires -------------- */
 
@@ -110,4 +109,862 @@ a {
     }
 }
 
-/* End Global Rules */
+/* Start Header */
+header {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 97px;
+    position: relative;
+}
+
+@media screen and (max-width: 767px) {
+    header .container {
+        min-height: 70px;
+    }
+}
+
+header .container::after {
+    content: "";
+    position: absolute;
+    height: 1px;
+    width: calc(100% - 30px);
+    background: #a2a2a2;
+    bottom: 0;
+}
+
+header .container .logo img {
+    height: 40px;
+}
+
+@media screen and (max-width: 767px) {
+    header .container .logo img {
+        height: 30px;
+    }
+}
+
+header nav {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+header nav .menu {
+    color: white;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    header nav .menu {
+        display: none;
+    }
+}
+
+header nav ul {
+    display: flex;
+}
+
+@media screen and (max-width: 767px) {
+    header .container {
+        min-height: 70px;
+    }
+
+    header .container .logo img {
+        height: 30px;
+    }
+
+    header nav ul {
+        display: none;
+    }
+
+    header nav .style {
+        color: var(--main-color);
+        transition: var(--transtion);
+        -webkit-transition: var(--transtion);
+        -moz-transition: var(--transtion);
+        -ms-transition: var(--transtion);
+        -o-transition: var(--transtion);
+    }
+
+    header nav .style+ul {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: rgb(0 0 0 / 50%);
+    }
+
+    header nav .style+ul li a {
+        padding: 20px;
+    }
+}
+
+header nav ul li a {
+    position: relative;
+    z-index: 5;
+    text-transform: uppercase;
+    font-weight: 500;
+    display: block;
+    padding: 40px 10px;
+    color: white;
+    font-size: 14px;
+    transition: var(--transtion);
+    -webkit-transition: var(--transtion);
+    -moz-transition: var(--transtion);
+    -ms-transition: var(--transtion);
+    -o-transition: var(--transtion);
+}
+
+header nav ul li a.active,
+header nav ul li a:hover {
+    color: var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+}
+
+header nav .form {
+    position: relative;
+    width: 40px;
+    height: 30px;
+    margin-left: 30px;
+    border-left: 1px solid white;
+}
+
+@media screen and (max-width: 767px) {
+    header nav .form {
+        margin: 0 20px;
+    }
+}
+
+header nav .form i {
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+
+/* End Header */
+
+/* Start Landing */
+.landing {
+    min-height: 100vh;
+    background-color: #1f2021;
+    background-image: url(../images/landing.jpg);
+    background-size: cover;
+    position: relative;
+}
+
+.landing .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0 0 0 / 60%);
+}
+
+.landing .text {
+    width: 50%;
+    color: white;
+    background-color: var(--transparent-color);
+    padding: 50px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    display: flex;
+    justify-content: flex-end;
+}
+
+.landing .text .content {
+    max-width: 500px;
+    padding-left: 10px;
+}
+
+.landing .text h2 {
+    font-size: 32px;
+    font-weight: normal;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+.landing .text p {
+    line-height: 2;
+    font-size: 14px;
+}
+
+.landing .change-background {
+    color: #ddd;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+}
+
+.landing .fa-angle-left {
+    left: 30px;
+}
+
+.landing .fa-angle-right {
+    right: 30px;
+}
+
+.landing .bullets {
+    position: absolute;
+    left: 50%;
+    bottom: 30px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    display: flex;
+}
+
+.landing .bullets li {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+    border-radius: 50px;
+    margin: 5px;
+}
+
+.landing .bullets li.active {
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+}
+
+/* Media quires landing */
+
+@media screen and (max-width: 768px) {
+    .landing .text {
+        padding: 30px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .landing .text .content {
+        padding-left: 0;
+        max-width: 100%;
+    }
+
+    .landing .change-background {
+        display: none;
+    }
+
+    .landing .text h2 {
+        text-align: center;
+    }
+}
+
+/* End Landing */
+
+/* Start Services */
+.services {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
+}
+
+@media screen and (min-width: 769px) {
+    .services .services-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+        column-gap: 40px;
+        row-gap: 60px;
+    }
+}
+
+.services .srv-box {
+    padding: 10px;
+    display: flex;
+}
+
+.services .srv-box i {
+    margin-right: 50px;
+}
+
+.services .text h3 {
+    color: var(--main-color);
+    margin-bottom: 30px;
+}
+
+.services .text p {
+    color: var(--p-color);
+    line-height: 2;
+}
+
+@media (max-width: 768px) {
+    .services .srv-box {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    .services .srv-box i {
+        margin: 0 0 30px;
+    }
+}
+
+/* End Services */
+
+/* Start Design */
+.design {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
+    height: 600px;
+    position: relative;
+    background-image: url(../images/design-features.jpg);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.design::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background-color: rgb(0 0 0 / 60%);
+}
+
+.design .image,
+.design .text {
+    position: relative;
+    z-index: 3;
+    flex: 1;
+}
+
+.design .image {
+    text-align: center;
+}
+
+.design .image img {
+    position: relative;
+    bottom: -150px;
+}
+
+.design .text {
+    color: white;
+    padding: 50px;
+    background-color: var(--transparent-color);
+}
+
+.design .text h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.design .text ul li {
+    padding: 15px 0;
+}
+
+.design .text ul li::before {
+    content: "\f390";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: 20px;
+    position: relative;
+    top: 1px;
+}
+
+@media screen and (max-width: 768px) {
+    .design {
+        padding-top: 0;
+        flex-direction: column;
+    }
+
+    .design .image,
+    .design .text {
+        width: 100%;
+        position: absolute;
+    }
+
+    .design .image {
+        z-index: 1;
+        bottom: 90px;
+    }
+
+    .design .text {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .design .text h2 {
+        font-size: 1.3rem;
+    }
+
+    .design .text ul li {
+        line-height: 2;
+    }
+}
+
+/* End Design */
+
+/* End Portfolio */
+.portfolio {
+    padding-top: var(--section--padding);
+}
+
+.portfolio ul {
+    display: flex;
+    justify-content: center;
+}
+
+.portfolio ul li {
+    padding: 10px;
+}
+
+.portfolio ul .active {
+    background-color: var(--main-color);
+    color: white;
+}
+
+.portfolio .img-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 60px;
+}
+
+.portfolio .img-container .box {
+    overflow: hidden;
+    position: relative;
+}
+
+.portfolio .img-container .box:hover .caption {
+    bottom: 0;
+}
+
+@media (min-width: 768px) {
+    .portfolio .img-container .box {
+        flex-basis: 50%;
+    }
+}
+
+@media (min-width: 1199px) {
+    .portfolio .img-container .box {
+        flex-basis: 25%;
+    }
+}
+
+.portfolio .img-container .box img {
+    max-width: 100%;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+
+.portfolio .img-container img:hover {
+    transform: rotate(3deg) scale(1.1);
+    -webkit-transform: rotate(3deg) scale(1.1);
+    -moz-transform: rotate(3deg) scale(1.1);
+    -ms-transform: rotate(3deg) scale(1.1);
+    -o-transform: rotate(3deg) scale(1.1);
+}
+
+.portfolio .img-container .box .caption {
+    position: absolute;
+    left: 0;
+    padding: 20px;
+    background-color: white;
+    width: 100%;
+    bottom: -100%;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+
+.portfolio .img-container .box .caption h4 {
+    font-weight: normal;
+    margin-bottom: 10px;
+}
+
+.portfolio .img-container .box .caption p {
+    color: var(--main-color);
+}
+
+.portfolio .more {
+    background: var(--main-color);
+    color: white;
+    padding: 15px 20px;
+    margin: 30px auto;
+    display: block;
+    width: fit-content;
+    text-transform: uppercase;
+}
+
+/* End Portflio */
+
+/* Start Video */
+.video {
+    position: relative;
+}
+
+.video::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 40%);
+}
+
+.video video {
+    width: 100%;
+}
+
+.video .text {
+    background-color: var(--transparent-color);
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    padding: 50px;
+    color: white;
+}
+
+.video .text h2 {
+    text-transform: uppercase;
+    font-weight: normal;
+    margin: 20px;
+}
+
+.video .text p {
+    margin: 20px;
+}
+
+.video .text button {
+    text-transform: uppercase;
+    background-color: white;
+    color: black;
+    outline: 1px solid black;
+    font-weight: 500;
+    padding: 15px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+}
+
+.video .text button:hover {
+    background-color: black;
+    color: white;
+}
+
+@media screen and (max-width: 768px) {
+    .video .text {
+        padding: 15px;
+    }
+
+    .video .text h2 {
+        font-size: 20px;
+    }
+}
+
+/* End Video */
+
+/* Start About */
+
+.about {
+    padding-top: var(--section--padding);
+    text-align: center;
+    overflow: hidden;
+}
+
+.about img {
+    position: relative;
+    bottom: -120px;
+    margin-top: -120px;
+    max-width: 100%;
+}
+
+@media (max-width: 767px) {
+    .about img {
+        bottom: -60px;
+        margin-top: -60px;
+    }
+}
+
+/* End About */
+
+/* Start Stats */
+
+.stats {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
+    background-image: url(../images/stats.png);
+    background-size: cover;
+    text-align: center;
+    position: relative;
+}
+
+.stats::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+}
+
+.stats::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+}
+
+.stats .container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.stats .container .box {
+    color: white;
+    padding: 50px;
+    background-color: var(--transparent-color);
+}
+
+@media (max-width: 768px) {
+    .stats .container .box {
+        flex-basis: 100%;
+    }
+}
+
+@media (min-width: 769px) {
+    .stats .container .box {
+        flex-basis: 50%;
+    }
+}
+
+@media (min-width: 992px) {
+    .stats .container .box {
+        flex-basis: 25%;
+    }
+}
+
+.stats .container .box i {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 30px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.stats .container .box div {
+    margin: 0 0 20px;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.stats .container .box p {
+    font-size: 14px;
+}
+
+/* End Stats */
+/* Start Our Skills */
+
+.our-skills {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
+}
+
+.our-skills .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+@media (min-width: 992px) {
+    .our-skills .container>div {
+        flex-basis: 45%;
+    }
+}
+
+.our-skills .container>div>h3 {
+    text-transform: uppercase;
+    margin: 0 0 30px;
+    font-weight: normal;
+    text-align: center;
+}
+
+.our-skills .container>div>p {
+    color: var(--p-color);
+    line-height: 2;
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.our-skills .container .testimonials .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.our-skills .container .testimonials .content img {
+    width: 100px;
+    margin-right: 50px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+    .our-skills .container .testimonials .content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .our-skills .container .testimonials .content img {
+        margin: 0 auto 20px;
+    }
+}
+
+.our-skills .container .testimonials .text {
+    line-height: 1.8;
+    border-bottom: 1px solid #ccc;
+}
+
+.our-skills .container .testimonials .text p {
+    color: var(--p-color);
+    text-align: right;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.our-skills .testimonials .bullets {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.our-skills .testimonials .bullets li {
+    width: 14px;
+    height: 14px;
+    border: 1px solid #aaa;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.our-skills .testimonials .bullets li.active {
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+}
+
+.our-skills .skills .prog-content {
+    margin-bottom: 40px;
+}
+.our-skills .prog-content h4 {
+    margin-bottom: 15px;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.our-skills .prog-content .prog {
+    background-color: #dedadc;
+    height: 30px;
+}
+.our-skills .prog-content .prog span {
+    display: block;
+    background-color: var(--main-color);
+    height: 100%;
+    position: relative;
+}
+.our-skills .prog-content .prog span::before {
+    content: attr(data-progress);
+    position: absolute;
+    color: white;
+    background-color: black;
+    top: -40px;
+    right: -18px;
+    padding: 4px 0;
+    width: 40px;
+    text-align: center;
+    border-radius: 4px;
+}
+.our-skills .prog-content .prog span::after {
+    content: '';
+    position: absolute;
+    border: 10px solid;
+    border-color: black transparent transparent transparent;
+    right: -8px;
+    top: -15px;
+}
+/* End Our Skills */
+
+/* Quote */
+.quote {
+    background-image: url(../images/quote.jpg);
+    background-size: cover;
+}
+
+.quote .container {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
+}
