--- a/css/style.css
+++ b/css/style.css
@@ -921,21 +921,25 @@ header nav .form i {
 .our-skills .skills .prog-content {
     margin-bottom: 40px;
 }
+
 .our-skills .prog-content h4 {
     margin-bottom: 15px;
     font-weight: normal;
     text-transform: uppercase;
 }
+
 .our-skills .prog-content .prog {
     background-color: #dedadc;
     height: 30px;
 }
+
 .our-skills .prog-content .prog span {
     display: block;
     background-color: var(--main-color);
     height: 100%;
     position: relative;
 }
+
 .our-skills .prog-content .prog span::before {
     content: attr(data-progress);
     position: absolute;
@@ -948,6 +952,7 @@ header nav .form i {
     text-align: center;
     border-radius: 4px;
 }
+
 .our-skills .prog-content .prog span::after {
     content: '';
     position: absolute;
@@ -956,15 +961,269 @@ header nav .form i {
     right: -8px;
     top: -15px;
 }
+
 /* End Our Skills */
 
 /* Quote */
 .quote {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
     background-image: url(../images/quote.jpg);
     background-size: cover;
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.quote::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 75%);
 }
 
 .quote .container {
+    position: relative;
+}
+
+.quote q {
+    font-size: 27px;
+    margin-bottom: 30px;
+    display: block;
+}
+
+.quote q::before {
+    content: open-quote;
+    font: var(--fa-font-solid);
+    font-size: 23px;
+}
+
+.quote q::after {
+    content: ' \f10e';
+    font: var(--fa-font-solid);
+    font-size: 23px;
+}
+
+/* End Quote */
+
+/* Start Pricing */
+.pricing {
     padding-top: var(--section--padding);
     padding-bottom: var(--section--padding);
 }
+
+.pricing .plans {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 30px;
+}
+
+.pricing .plans .plan {
+    background-color: #fcfcfc;
+    text-align: center;
+}
+
+.pricing .plans .plan .head {
+    padding: 40px 20px;
+    border-top: 1px solid var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+}
+
+.pricing .plans .plan .head h3 {
+    text-transform: uppercase;
+    font-weight: normal;
+    margin-bottom: 20px;
+}
+
+.pricing .plans .plan .head span {
+    font-size: 60px;
+    font-weight: 700;
+    position: relative;
+}
+
+.pricing .plans .plan .head span::before {
+    content: '$';
+    position: absolute;
+    font-size: 25px;
+    left: -25px;
+    top: 0;
+    font-weight: normal;
+}
+
+.pricing .plans .plan .head span::after {
+    content: '/Mo';
+    position: absolute;
+    right: 0;
+    bottom: 1px;
+    right: -50px;
+    font-size: 20px;
+}
+
+ul {
+    border-bottom: 1px solid var(--main-color);
+}
+
+.pricing .plans .plan ul li {
+    padding: 20px;
+    position: relative;
+}
+
+.pricing .plans .plan ul li:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 150px;
+    background-color: var(--main-color);
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.pricing .plans .plan a {
+    border: 1px solid var(--main-color);
+    padding: 15px 30px;
+    display: block;
+    width: fit-content;
+    margin: 30px auto;
+    color: black;
+    font-weight: 600;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
+.pricing .plans .plan a:hover {
+    color: white;
+    background-color: var(--main-color);
+}
+
+.pricing .contact-text {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 20px;
+    text-transform: capitalize;
+}
+
+.pricing .contact-link {
+    display: block;
+    background-color: var(--main-color);
+    width: fit-content;
+    margin: 20px auto;
+    padding: 15px 30px;
+    color: white;
+    font-weight: 600;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+}
+
+.pricing .contact-link:hover {
+    background-color: white;
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
+}
+
+/* End Pricing */
+/* Start Subscribe */
+.subscribe {
+    padding-top: var(--section--padding);
+    padding-bottom: var(--section--padding);
+    background-image: url(../images/subscribe.jpg);
+    background-size: cover;
+    position: relative;
+    color: white;
+}
+
+.subscribe::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 50%)
+}
+
+.subscribe .container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+@media screen and (max-width: 991px) {
+    .subscribe .container {
+        flex-direction: column;
+    }
+}
+
+.subscribe form {
+    display: flex;
+    align-items: center;
+    width: 500px;
+    max-width: 100%;
+    border: 1px solid white;
+
+}
+
+.subscribe form i {
+    padding: 15px;
+}
+
+.subscribe form input[type="email"] {
+    background-color: transparent;
+    padding: 20px;
+    outline: none;
+    caret-color: var(--main-color);
+    color: white;
+    width: calc(100% - 130px);
+    border: none;
+}
+
+.subscribe form input[type="submit"] {
+    width: 130px;
+    background-color: var(--main-color);
+    color: white;
+    padding: 20px;
+    border: none;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.subscribe form ::placeholder {
+    color: rgba(255, 255, 255, 0.749);
+}
+
+.subscribe p {
+    line-height: 2;
+    margin-left: 50px;
+    text-align: center;
+}
+
+@media screen and (max-width: 991px) {
+    .subscribe p {
+        margin: 30px 0 0 0;
+    }
+}
+
+/* End Subscribe */
